# spotify-download-automation

./: .gitignore  README.md
src/: main.py  pyproject.toml  requirements.txt
