[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Klemens Träger <72913784+klemenstraeger@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yt-dlp = "^2024.11.18"
spotipy = "^2.24.0"
google-cloud-storage = "^2.18.2"
python-dotenv = "^1.0.1"
ytmusicapi = "^1.8.2"
functions-framework = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
